--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                         <img class="senderIconImg" src='./assets/images/a1.png' />
                     </div>
                     <div class="senderTextMsgs">
-                        <!-- <div class="senderTextTyping">
+                        <div class="senderTextTyping">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 aria-hidden="true" role="img" width="1em" height="1em"
                                 preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
@@ -508,14 +508,14 @@
                                         calcMode="spline" />
                                 </circle>
                             </svg>
-                        </div> -->
+                        </div>
                         <br>
-                        <div class="senderTextMsg">
+                        <!-- <div class="senderTextMsg">
                             <p>
                                 Super, I will get you the new brief for our own site over to you this evening, so you
                                 have time to read over I'm good thank you
                             </p>
-                        </div>
+                        </div> -->
                         <br>
                         <!-- <div class="senderTextFile">
                             <a href="#">
